Test if excludedGroupsTags will work. Used because CI dont support GUI test so it errors